--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ img {
     padding: 16px 16px 40px 16px;
     border-radius: 20px;
     background-color: white;
+    box-shadow: 4px 8px 12px 4px rgb(0 0 0 / 20%);
 }
 
 .text-area {
