Adjust styles to better match the design.

--- a/index.css
+++ b/index.css
@@ -1,17 +1,24 @@
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0;
-    padding: 0;
     height: 100vh;
+    width: 100vw;
     font-family: "Outfit", serif;
-    background-color: hsl(212, 45%, 89%);
+    background-color: rgba(213, 225, 239, 1);
 }
 
 h1 {
-    padding-bottom: 16px;
     font-size: 22px;
     font-weight: 700;
 }
@@ -19,7 +26,7 @@ h1 {
 p {
     font-size: 15px;
     font-weight: 400;
-    color: hsla(216, 15%, 48%, 1);
+    color: rgba(104, 119, 141, 1);
 }
 
 img {
@@ -31,17 +38,21 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 288px;
+    gap: 16px;
     padding: 16px 16px 40px 16px;
-    border-radius: 20px;
+    text-align: center;
+    letter-spacing: 0.2px;
     background-color: white;
-    box-shadow: 4px 8px 12px 4px rgb(0 0 0 / 20%);
+    border-radius: 20px;
+    box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.05);
 }
 
 .text-area {
-    text-align: center;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 0 16px;
-    letter-spacing: 0.2px;
-    box-sizing: border-box;
+    gap: 16px;
+    width: 288px;
 }
+
