--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 * {
@@ -44,7 +43,7 @@ img {
     letter-spacing: 0.2px;
     background-color: white;
     border-radius: 20px;
-    box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: 2px 10px 10px 0 rgba(0, 0, 0, 0.05);
 }
 
 .text-area {
