--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 * {
@@ -20,11 +21,14 @@ body {
 h1 {
     font-size: 22px;
     font-weight: 700;
+    line-height: 120%
+    color: rgba(31, 49, 79, 1);
 }
 
 p {
     font-size: 15px;
     font-weight: 400;
+    line-height: 140%
     color: rgba(104, 119, 141, 1);
 }
 
@@ -43,7 +47,7 @@ img {
     letter-spacing: 0.2px;
     background-color: white;
     border-radius: 20px;
-    box-shadow: 2px 10px 10px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: 2px 10px 16px 0 rgba(0, 0, 0, 0.05);
 }
 
 .text-area {
