--- a/index.css
+++ b/index.css
@@ -21,14 +21,14 @@ body {
 h1 {
     font-size: 22px;
     font-weight: 700;
-    line-height: 120%
+    line-height: 120%;
     color: rgba(31, 49, 79, 1);
 }
 
 p {
     font-size: 15px;
     font-weight: 400;
-    line-height: 140%
+    line-height: 140%;
     color: rgba(104, 119, 141, 1);
 }
 
