--- a/styles/scss/base/_base.scss
+++ b/styles/scss/base/_base.scss
@@ -10,6 +10,7 @@ main {
   background-color: var(--clr-white-500);
   padding: var(--spacing-200);
   border-radius: 1.25rem;
+  box-shadow: 0 1.5625rem 1.5625rem 0 rgba(0, 0, 0, 0.05);
 }
 
 img {
