--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 * {
@@ -19,43 +18,43 @@ body {
 }
 
 h1 {
-    font-size: 22px;
+    font-size: 1.375rem;
     font-weight: 700;
-    line-height: 120%
+    line-height: 1.2;
     color: rgba(31, 49, 79, 1);
 }
 
 p {
-    font-size: 15px;
+    font-size: 0.9375rem;
     font-weight: 400;
-    line-height: 140%
+    line-height: 1.4;
     color: rgba(104, 119, 141, 1);
 }
 
 img {
-    width: 288px;
-    border-radius: 10px;
+    width: 18rem;
+    border-radius: 0.625rem;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 16px;
-    padding: 16px 16px 40px 16px;
+    gap: 1rem;
+    padding: 1rem 1rem 2.5rem 1rem;
     text-align: center;
-    letter-spacing: 0.2px;
+    letter-spacing: 0.0125rem;
     background-color: white;
-    border-radius: 20px;
-    box-shadow: 2px 10px 16px 0 rgba(0, 0, 0, 0.05);
+    border-radius: 1.25rem;
+    box-shadow: 0.125rem 0.625rem 1rem 0 rgba(0, 0, 0, 0.05);
 }
 
 .text-area {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 16px;
-    gap: 16px;
-    width: 288px;
+    padding: 0 1rem;
+    gap: 1rem;
+    width: 18rem;
 }
 
