Adjusted letter spacing.

--- a/styles/scss/base/_typography.scss
+++ b/styles/scss/base/_typography.scss
@@ -11,5 +11,6 @@ p {
   font-family: 'Outfit', sans-serif;
   font-size: 0.9375rem;
   line-height: 1.4;
+  letter-spacing: 0.0125rem;
   color: var(--clr-slate-500);
 }
